Comit inicial Fase 2
commit entrega

--- a/fase2/design.html
+++ b/fase2/design.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unad Fase 2 </title>
+    <title>Unad Fase 2 Mauricio Salazar </title>
 </head>
 <body>
     <header> 
@@ -13,7 +13,7 @@
 <nav>
   <ul>
       <li> <a href="#"> INICIO </a> </li>
-      <li>  <a href="#"> TEMAS </a> 
+      <li>  <a href="#"> TEMAS </a>     
         <ul>
             <li><a href="#">Tema 1</a></li>
             <li><a href="#">Tema 2</a></li>
@@ -58,14 +58,26 @@
 
             Cuando describimos a flexbox como unidimensional destacamos el hecho que flexbox maneja el layout en una sola dimensión a la vez — ya sea como fila o como columna. 
             Esto contrasta con el modelo bidimensional del Grid Layout de CSS, el cual controla columnas y filas a la vez.</p>
-    <div> <img src="img/cssimg.png" alt="Error en imagen" width="410" height="510"></div>       
+    <div> <img src="img/cssimg.png" alt="Error en imagen" width="410" height="300"></div>       
 </article>
 
+<div  class="Container" >
+    <img src="img/Mockup.JPG" alt="no cargo" >
+</div>
 <p>
-    https://wikies.wiki/wiki/en/CSS_Grid_Layout
+    Bibliografia <br>
 
-    https://developer.mozilla.org/es/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox
+    __________________________________________________________ <br>
+
+     <a href="https://wikies.wiki/wiki/en/CSS_Grid_Layout"> https://wikies.wiki/wiki/en/CSS_Grid_Layout </a> <br>
+
+     <a href="https://developer.mozilla.org/es/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox">https://developer.mozilla.org</a><br>
+
+<a href="https://www.w3schools.com/html/html_links.asp">    https://www.w3schools.com/html/html_links.asp  </a><br>
+
 
 </p>
+
+<footer>   <a href="mailto:msalazarpa@unadvirtual.edu.co ">msalazarpa@unadvirtual.edu.co </a>   Skype -- Mauricio Salazar--   28 de Junio de 2021 </footer>
 </body>
 </html>
