--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
    <h3>Mauricio Salazar <br> Ingenieria de Sistemas <br> Junio-2021  <br> <a href="https://github.com/MauricioSalazarP" target="_blank"> <p> https://github.com/MauricioSalazarP </p> </a> </h3> 
 
    <h3>  <a href="fase2/design.html" target="_blank"> Vinculo Tarea Fase 2 </a></h3>
+
+   <a href="https://mauriciosalazarp.github.io/DSW-Mauricio_Salazar/"> ENLACE DE GITHUB PAGES</a>
+   
 </body>
 </html>
