--- a/fase3/index.html
+++ b/fase3/index.html
@@ -4,48 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/e91c47e2e4.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Unad Fase 2 Mauricio Salazar </title>
+    <script src="./app.js" defer></script>
+    <title>Unad Fase 3 Mauricio Salazar </title>
 </head>
 <body>
     
 <nav class="menu">
-    <label class="logo"></label>
+    <label class="logo">Fase 3 Mauricio Salazar</label>
     <ul class="menu_items">
-    <li class="active"> <a href="#"> INICIO </a> </li>
-    <li>  <a href="#"> TEMAS </a>     
-        <ul>
-            <li><a href="#">Tema 1</a></li>
-            <li><a href="#">Tema 2</a></li>
-        </ul>
-    </li>
-
-
-    <li>  <a href="#">RECURSOS DIGITALES</a>
-        <ul>
-            <li><a href="#">Recursos 1</a></li>
-            <li><a href="#">Recursos 2</a></li>
-        </ul>
-    </li>
-
-
-    <li>  <a href="#">APRENDIZAJE</a>
-        <ul>
-            <li><a href="#">Actividad 1</a></li>
-            <li><a href="#">Actividad 2</a></li>
-        </ul>
-    
-    </li>
-
-
-    <li>  <a href="#">ACERCA DE</a></li>
+        <li class="active"> <a href="#"> INICIO </a> </li>
+        <li>  <a href="#"> TEMAS </a>
+            <ul class="sub">
+                <li class="a">Tema 1</li>
+                <li class="a">tema 2</li>
+            </ul> 
+        </li>
+        <li>  <a href="#">RECURSOS DIGITALES</a>
+            <ul class="sub">
+                <li class="a">Recurso1</li>
+                <li class="a">Recurso2</li>
+            </ul> 
+        </li>
+        <li>  <a href="#">APRENDIZAJE</a>
+            <ul class="sub">
+                <li class="a">Aprendizaje1</li>
+                <li class="a">Aprendizaje2</li>
+            </ul> 
+        </li>
+        <li>  <a href="#">ACERCA DE</a></li>
     </ul>
-    <span class="btn_menu">
-        <i class="fa fa-bars"></i>
-    </span>
+<span class="btn_menu">
+    <i class="fab fa-buffer"></i>
+</span>
 </nav>
 <header> 
     Tematica "Flex Box, CSS Grid"
