--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/e91c47e2e4.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
     <title>UNA Actividad 1</title>
 </head>
 <body>
@@ -13,6 +15,6 @@
    <h3>  <a href="fase2/design.html" target="_blank"> Vinculo Tarea Fase 2 </a></h3>
 
    <a href="https://mauriciosalazarp.github.io/DSW-Mauricio_Salazar/"> ENLACE DE GITHUB PAGES</a>
-   
+   <i class="fab fa-buffer"></i>
 </body>
 </html>
