--- a/fase3/index.html
+++ b/fase3/index.html
@@ -43,45 +43,28 @@
 </span>
 </nav>
 <header> 
-    Tematica "Flex Box, CSS Grid"
+    <h1>Tematica "Flex Box, CSS Grid"</h1>
 </header>
-<section>
-    <h2>Propósito del sitio</h2>
-    <p> El proposito de el sitio va a ser enseñar dada la pandemia de manera virtual conceptos de diseño WEB, se va a introducir a los estudiantes mediante este recurso 
-        al mundo de "Flex Box, CSS Grid" para el manejo de datos y entendimiento de la grilla a travez de CSS
-    </p>
-</section>
-<article>
-    <h1>Diseño de cuadrícula CSS </h1> <br> En las hojas de estilo en cascada, el diseño de cuadrícula CSS o la cuadrícula CSS crea diseños de diseño web complejos y receptivos de manera más fácil y consistente en todos los navegadores. Ha habido otros métodos para controlar los métodos de diseño de páginas web, como tablas, modelo de caja y caja flexible CSS. La cuadrícula CSS no es actualmente un estándar oficial (es una recomendación candidata del W3C) aunque ha sido adoptada por la mayoría de los principales navegadores
+<section class="section">
+    <div class="articulos">
+        <article class="article">
+            <h1>Diseño de cuadrícula CSS </h1> <br> En las hojas de estilo en cascada, el diseño de cuadrícula CSS o la cuadrícula CSS crea diseños de diseño web complejos y receptivos de manera más fácil y consistente en todos los navegadores. Ha habido otros métodos para controlar los métodos de diseño de páginas web, como tablas, modelo de caja y caja flexible CSS. La cuadrícula CSS no es actualmente un estándar oficial (es una recomendación candidata del W3C) aunque ha sido adoptada por la mayoría de los principales navegadores
  
-    <p>A partir de octubre de 2017, Chrome, Firefox, Safari y Edge son compatibles con la cuadrícula CSS sin prefijos de proveedor. IE 10 y 11 admiten la cuadrícula CSS pero con una especificación desactualizada. En dispositivos móviles, todos los navegadores modernos admiten la cuadrícula CSS, excepto Opera Mini y Brave Browser. Los desarrolladores web que se dirigen a navegadores más
-         antiguos pueden utilizar Modernizr 3.5.0 para detectar y degradar la página web según se evidencie</p>
+            <p>A partir de octubre de 2017, Chrome, Firefox, Safari y Edge son compatibles con la cuadrícula CSS sin prefijos de proveedor. IE 10 y 11 admiten la cuadrícula CSS pero con una especificación desactualizada. En dispositivos móviles, todos los navegadores modernos admiten la cuadrícula CSS, excepto Opera Mini y Brave Browser. Los desarrolladores web que se dirigen a navegadores más
+             antiguos pueden utilizar Modernizr 3.5.0 para detectar y degradar la página web según se evidencie</p>
 
         <h3> Conceptos Básicos de flexbox</h3> 
         <p>El Módulo de Caja Flexible, comúnmente llamado flexbox, fue diseñado como un modelo unidimensional de layout, y como un método que pueda ayudar a distribuir el espacio entre los ítems de una interfaz y mejorar las capacidades de alineación. Este artículo hace un repaso de las principales características de flexbox, las que exploraremos con mayor detalle en el resto de estas guías.
 
             Cuando describimos a flexbox como unidimensional destacamos el hecho que flexbox maneja el layout en una sola dimensión a la vez — ya sea como fila o como columna. 
             Esto contrasta con el modelo bidimensional del Grid Layout de CSS, el cual controla columnas y filas a la vez.</p>
-    <div> <img src="img/cssimg.png" alt="Error en imagen" width="410" height="300"></div>       
-</article>
-
-<div  class="Container" >
-    <img src="img/Mockup.JPG" alt="no cargo" >
-</div>
-<p>
-    Bibliografia <br>
-
-    __________________________________________________________ <br>
-
-     <a href="https://wikies.wiki/wiki/en/CSS_Grid_Layout"> https://wikies.wiki/wiki/en/CSS_Grid_Layout </a> <br>
-
-     <a href="https://developer.mozilla.org/es/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox">https://developer.mozilla.org</a><br>
-
-<a href="https://www.w3schools.com/html/html_links.asp">    https://www.w3schools.com/html/html_links.asp  </a><br>
-
-
-</p>
-
+        </article>
+        <article class="article"></article>
+    </div>
+    <aside class="aside">
+        <div class="publicidad"></div>
+    </aside>
+</section>
 <footer>   <a href="mailto:msalazarpa@unadvirtual.edu.co ">msalazarpa@unadvirtual.edu.co </a>   Skype -- Mauricio Salazar--   28 de Junio de 2021 </footer>
 </body>
 </html>
