complementos y comieza contenido final
se termina inicio y se empieza a generas los temas

--- a/fase3/tema1.html
+++ b/fase3/tema1.html
@@ -10,17 +10,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="./app.js" defer></script>
-    <title>Unad Fase 3 Mauricio Salazar </title>
+    <title>tema 1 </title>
 </head>
 <body>
     
 <nav class="menu">
-    <label class="logo">Fase 3 Mauricio Salazar</label>
+    <label class="logo">CSS GRID</label>
     <ul class="menu_items">
-        <li class="active"> <a href="#"> INICIO </a> </li>
-        <li>  <a href="#"> TEMAS </a>
+        <li class=> <a href="../fase3/index.html"> INICIO </a> </li>
+        <li class="active">  <a href="#"> TEMAS </a>
             <ul class="sub">
-                <li class="a"> <a href="../fase3/tema1.html">CSS GRID </a></li>
+                <li class="a">CSS GRID</li>
                 <li class="a">FLEX-BOX</li>
             </ul> 
         </li>
@@ -43,7 +43,7 @@
 </span>
 </nav>
 <header> 
-    <h1>Tematica "Flex Box, CSS Grid"</h1>
+    <h1>INTRODUCIENDONOS EN CSS GRID</h1>
 </header>
 <section class="section">
     <div class="articulos">
@@ -52,7 +52,7 @@
 
             A partir de octubre de 2017, Chrome, Firefox, Safari y Edge son compatibles con la cuadrícula CSS sin prefijos de proveedor. IE 10 y 11 admiten la cuadrícula CSS pero con una especificación desactualizada. En dispositivos móviles, todos los navegadores modernos admiten la cuadrícula CSS, excepto Opera Mini y Brave Browser. Los desarrolladores web que se dirigen a navegadores más
             antiguos pueden utilizar Modernizr 3.5.0 para detectar y degradar la página web según se evidencie</p>
-        <img src="../fase2/img/css-flexbox.webp" alt="">
+        <img src="../fase2/img/cssgrid.jpg" alt=""><br>
         <h1>  DISEÑANDO TU WEB EN 2021 </h1> 
         <p>En este sitio WEB vas a aprender los conceptos necesarios para empezar a disenar tu sitio web de manera profesional vamos a emplear nuevas tenicas que son el nuevo estandar en la industria y mejoraran tus competencias bienvenido a tu Web para aprender <b>puedes probar redimencionando este sitio para empezar.</b> </p>
         </article>
