--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
    <h3>  <a href="fase2/design.html" target="_blank"> Vinculo Tarea Fase 2 </a></h3>
 
    <a href="https://mauriciosalazarp.github.io/DSW-Mauricio_Salazar/"> ENLACE DE GITHUB PAGES</a>
+
+   <a href="../DSW-Mauricio_Salazar/fase3/index.html"> ENLACE A FASE 3</a>
+
    <i class="fab fa-buffer"></i>
 </body>
 </html>
