--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/e91c47e2e4.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../DSW-Mauricio_Salazar/stylefases.css">
     <title>UNA Actividad 1</title>
 </head>
 <body>
@@ -14,9 +14,9 @@
 
    <h3>  <a href="fase2/design.html" target="_blank"> Vinculo Tarea Fase 2 </a></h3>
 
-   <a href="https://mauriciosalazarp.github.io/DSW-Mauricio_Salazar/"> ENLACE DE GITHUB PAGES</a>
+  <h3><a href="https://mauriciosalazarp.github.io/DSW-Mauricio_Salazar/" > ENLACE DE GITHUB PAGES</a> <br></h3> 
 
-   <a href="../DSW-Mauricio_Salazar/fase3/index.html"> ENLACE A FASE 3</a>
+  <h3><a href="../DSW-Mauricio_Salazar/fase3/index.html" target="_blank"> ENLACE A FASE 3</a></h3> 
 
    <i class="fab fa-buffer"></i>
 </body>
