--- a/fase3/AcercaDe.html
+++ b/fase3/AcercaDe.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/e91c47e2e4.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
@@ -17,7 +18,7 @@
 <nav class="menu">
     <label class="logo">Fase 3 Mauricio Salazar</label>
     <ul class="menu_items">
-        <li class="active"> <a href="#"> INICIO </a> </li>
+        <li class="active"> <a href="../fase3/index.html"> INICIO </a> </li>
         <li>  <a href="#"> TEMAS </a>
             <ul class="sub">
                 <li class="a"> <a href="../fase3/tema1.html">CSS GRID </a></li>
@@ -36,27 +37,25 @@
                 <li class="a">Aprendizaje2</li>
             </ul> 
         </li>
-        <li>  <a href="../fase3/AcercaDe.html">ACERCA DE</a></li>
+        <li>  <a href="#">ACERCA DE</a></li>
     </ul>
 <span class="btn_menu">
     <i class="fab fa-buffer"></i>
 </span>
 </nav>
 <header> 
-    <h1>Tematica "Flex Box, CSS Grid"</h1>
+    <h1>Desarrollado por.. </h1>
 </header>
 <section class="section">
     <div class="articulos">
         <article class="article">
-            <h1> INTRODUCCION A CSS GRID & FLEX-BOX  </h1> <p> Entendiendo el avance de la tecnologia en los ultimos años en el presente sitio web encontraremos una introduccion a una de las tematicas mas importantes para el diseño web, con CSS Grid y Flexbox se moderniza la manera en que entendemos el diseño y aplicamos responsividad para la variedad de dispositivos con que contamos en la actualidad <br> 
-
-            A partir de octubre de 2017, Chrome, Firefox, Safari y Edge son compatibles con la cuadrícula CSS sin prefijos de proveedor. IE 10 y 11 admiten la cuadrícula CSS pero con una especificación desactualizada. En dispositivos móviles, todos los navegadores modernos admiten la cuadrícula CSS, excepto Opera Mini y Brave Browser. Los desarrolladores web que se dirigen a navegadores más
-            antiguos pueden utilizar Modernizr 3.5.0 para detectar y degradar la página web según se evidencie</p>
-        <img src="../fase2/img/css-flexbox.webp" alt="">
-        <h1>  DISEÑANDO TU WEB EN 2021 </h1> 
-        <p>En este sitio WEB vas a aprender los conceptos necesarios para empezar a disenar tu sitio web de manera profesional vamos a emplear nuevas tenicas que son el nuevo estandar en la industria y mejoraran tus competencias bienvenido a tu Web para aprender <b>puedes probar redimencionando este sitio para empezar.</b> </p>
+            Pagina es insumo y pruducto del proceso formativo, se realiza la pagina web aplicando los conceptos de HTML y CSS Flexbox con algo de Java script para dale dinamismo al responsive, a continuacion los perfiles del realizador de la pagina web
+            <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="es_ES" data-type="vertical" data-theme="dark" data-vanity="mauricio-salazar-3b962a171"><a class="LI-simple-link" href='https://co.linkedin.com/in/mauricio-salazar-3b962a171?trk=profile-badge'>Mauricio Salazar</a></div>
         </article>
-        <article class="article"></article>
+       
+        <article class="article">  
+            
+        </article>
         <aside class="aside">
             <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FUniversidadUNAD%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
         </aside>
