aGREGACION A FASE 4 Y COMPLEMENTO FASE 3
aGREGACION A FASE 4 Y COMPLEMENTO FASE 3

--- a/fase3/tema1.html
+++ b/fase3/tema1.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="./app.js" defer></script>
-    <title>tema 1 </title>
+    <title>CSS GRID </title>
 </head>
 <body>
     
@@ -20,14 +20,14 @@
         <li class=> <a href="../fase3/index.html"> INICIO </a> </li>
         <li class="active">  <a href="#"> TEMAS </a>
             <ul class="sub">
-                <li class="a">CSS GRID</li>
-                <li class="a">FLEX-BOX</li>
+                <li class="a"> <a href="../fase3/tema1.html">CSS GRID </a></li>
+                <li class="a"> <a href="../fase3/flexbox.html">FLEX-BOX </a> </li>
             </ul> 
         </li>
         <li>  <a href="#">RECURSOS DIGITALES</a>
             <ul class="sub">
-                <li class="a">Recurso1</li>
-                <li class="a">Recurso2</li>
+                <li class="a"> <a href="../fase3/resursosdigitales1.html">Recurso Digital 1</a></li>
+                <li class="a"> <a href="../fase3/resursosdigitales2.html">Recurso Digital 2</a></li>
             </ul> 
         </li>
         <li>  <a href="#">APRENDIZAJE</a>
