--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <h3><a href="https://mauriciosalazarp.github.io/DSW-Mauricio_Salazar/" > ENLACE DE GITHUB PAGES</a> <br></h3> 
 
   <h3><a href="../DSW-Mauricio_Salazar/fase3/index.html" target="_blank"> ENLACE A FASE 3</a></h3> 
+  <h3><a href="../DSW-Mauricio_Salazar/fase4/index.html" target="_blank"> ENLACE A FASE 4</a></h3> 
 
    <i class="fab fa-buffer"></i>
 </body>
