--- a/fase3/AcercaDe.html
+++ b/fase3/AcercaDe.html
@@ -11,24 +11,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="./app.js" defer></script>
-    <title>Unad Fase 3 Mauricio Salazar </title>
+    <title>Acerca De </title>
 </head>
 <body>
     
 <nav class="menu">
-    <label class="logo">Fase 3 Mauricio Salazar</label>
+    <label class="logo">Fase 4 Mauricio Salazar</label>
     <ul class="menu_items">
         <li class="active"> <a href="../fase3/index.html"> INICIO </a> </li>
         <li>  <a href="#"> TEMAS </a>
             <ul class="sub">
                 <li class="a"> <a href="../fase3/tema1.html">CSS GRID </a></li>
-                <li class="a">FLEX-BOX</li>
+                <li class="a"> <a href="../fase3/flexbox.html">  FLEX-BOX </a></li>
             </ul> 
         </li>
         <li>  <a href="#">RECURSOS DIGITALES</a>
             <ul class="sub">
-                <li class="a">Recurso1</li>
-                <li class="a">Recurso2</li>
+                <li class="a"> <a href="../fase3/resursosdigitales1.html">Recurso Digital 1</a></li>
+                <li class="a"> <a href="../fase3/resursosdigitales2.html">Recurso Digital 2</a></li>
             </ul> 
         </li>
         <li>  <a href="#">APRENDIZAJE</a>
