--- a/fase4/flexbox.html
+++ b/fase4/flexbox.html
@@ -32,8 +32,8 @@
         </li>
         <li>  <a href="#">APRENDIZAJE</a>
             <ul class="sub">
-                <li class="a">Aprendizaje1</li>
-                <li class="a">Aprendizaje2</li>
+                <li class="a"><a href="../fase4/Aprendizaje1.html">Evaluacion_1</a> </li>
+                <li class="a"><a href="../fase4/Aprendizaje2.html">Evaluacion_2</a> </li>
             </ul> 
         </li>
         <li>  <a href="../fase4/AcercaDe.html">ACERCA DE</a></li>
